test/orig/01-syntax/inv_exception/inv_exception.expected
File "inv_exception.ml", line 1, characters 42-43:
1 | let () = [%LOG [%DEBUG] "msg" [%EXCEPTION 0]]
                                              ^
Error: This expression has type int but an expression was expected of type
         exn
