test/orig/01-syntax/inv_exception/inv_exception.ml
let () = [%LOG [%DEBUG] "msg" [%EXCEPTION 0]]
